--- a/BootCRUDApp/templates/BootCRUDApp/index.html
+++ b/BootCRUDApp/templates/BootCRUDApp/index.html
@@ -1,5 +1,24 @@
 {% extends 'BootCRUDApp/base.html' %}
 
 {% block content %}
-<h1>In the Index Page</h1>
+<p><a href="{% url 'addItem' %}">To add an Item</a></p>
+<p><a href="{% url 'editItem' %}">To edit an Item</a></p>
+
+{% if allEntries %}
+<div class="gridContainer">
+    {% for eachEntry in allEntries %}
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="{{ eachEntry.imageURL }}" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">{{ eachEntry.name }}</h5>
+            <p class="card-text">The item costs {{ eachEntry.price }}. It is used for {{ eachEntry.description }}</p>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+{% else %}
+<h1>No Items</h1>
+{% endif %}
+
+
 {% endblock content %}
